--- a/05-1_louispoulse/css/main.css
+++ b/05-1_louispoulse/css/main.css
@@ -148,7 +148,7 @@ header .top_banner a {
 } */
 
 .gnb .g_bottom>ul>li {
-    font-size: 17px;
+    font-size: 19px;
 }
 
 .gnb .g_bottom>ul>li>ul {
@@ -160,7 +160,7 @@ header .top_banner a {
     line-height: 35px;
     background: #111;
     color: #fff;
-    padding: 30px 0;
+    padding: 30px;
     transition: 0.5s;
     z-index: 999;
     visibility: hidden;
