--- a/05-1_louispoulse/css/main.css
+++ b/05-1_louispoulse/css/main.css
@@ -13,18 +13,22 @@
 }
 
 * {
-    outline: 1px solid rgb(163, 206, 184)-;
+    outline: 1px solid rgb(163, 206, 184);
     font-family: 'Pretendard-Regular';
     font-weight: 400;
 }
 
+html {
+    font-size: 10px;
+}
+
 .container {
-    width: 1200px;
+    width: 120rem;
     margin: 0 auto;
 }
 
 h2 {
-    font-size: 50px;
+    font-size: 5rem;
     font-weight: 900;
     font-family: 'SBAggroB';
 }
@@ -35,9 +39,9 @@ header .top_banner {
     z-index: 999;
     background: #111;
     color: #fff;
-    line-height: 35px;
+    line-height: 3.5rem;
     text-align: center;
-    font-size: 13px;
+    font-size: 1.3rem;
     font-weight: 500;
 }
 
@@ -51,7 +55,7 @@ header .top_banner p {
 }
 
 header .top_banner a {
-    font-size: 25px;
+    font-size: 2.5rem;
 }
 
 /* gnb */
@@ -64,8 +68,9 @@ header .top_banner a {
 }
 
 .gnb .g_top {
-    line-height: 40px;
+    line-height: 4rem;
     border-bottom: 1px solid #ddd;
+    font-size: 1.5rem;
 }
 
 .gnb .g_top .container {
@@ -77,14 +82,14 @@ header .top_banner a {
     color: #999;
     outline: none;
     border: none;
-    width: 150px;
+    width: 15rem;
     padding: 3px 0;
     margin-left: 30px;
 }
 
 .gnb .g_top input[type="text"]::placeholder {
     padding: 5px 10px;
-    font-size: 15px;
+    font-size: 1.5rem;
     letter-spacing: 2px;
 }
 
@@ -96,12 +101,12 @@ header .top_banner a {
     background: transparent;
     border: none;
     outline: none;
-    font-size: 19px;
+    font-size: 1.9rem;
 }
 
 .gnb .g_top ul {
     display: flex;
-    gap: 30px;
+    gap: 3rem;
 }
 
 /* .gnb .g_bottom {
@@ -122,18 +127,18 @@ header .top_banner a {
 .gnb .g_bottom {
     display: flex;
     justify-content: space-between;
-    line-height: 100px;
+    line-height: 10rem;
 }
 
 .gnb .g_bottom h1 {
-    width: 150px;
+    width: 15rem;
     font-size: 0;
 }
 
 .gnb .g_bottom>ul {
     position: relative;
     display: flex;
-    gap: 50px;
+    gap: 5rem;
 }
 
 /* .gnb .g_bottom>ul::after {
@@ -148,19 +153,19 @@ header .top_banner a {
 } */
 
 .gnb .g_bottom>ul>li {
-    font-size: 19px;
+    font-size: 1.9rem;
 }
 
 .gnb .g_bottom>ul>li>ul {
     position: absolute;
-    top: 100px;
+    top: 10rem;
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
-    line-height: 35px;
+    line-height: 3.5rem;
     background: #111;
     color: #fff;
-    padding: 30px;
+    padding: 3rem;
     transition: 0.5s;
     z-index: 999;
     visibility: hidden;
@@ -172,13 +177,13 @@ header .top_banner a {
 
 /* main_visual */
 .main_visual .inner {
-    height: calc(100vh - 175px);
+    height: calc(100vh - 17.5rem);
     overflow: hidden;
 }
 
 /* categories */
 .categories {
-    padding: 150px 0 100px 0;
+    padding: 15rem 0 10rem 0;
 }
 
 .categories .container {
@@ -188,10 +193,10 @@ header .top_banner a {
 
 .categories figure {
     position: relative;
-    width: 180px;
+    width: 18rem;
     border-radius: 50%;
     background: #f9f9f9;
-    margin: 0 0 30px 0;
+    margin: 0 0 3rem 0;
 }
 
 .categories figure::after {
@@ -215,35 +220,36 @@ header .top_banner a {
 .categories .itm p {
     text-align: center;
     font-family: 'SBAggroB';
-    font-size: 17px;
+    font-size: 1.7rem;
 }
 
 /* best */
 .best {
     display: flex;
-    margin: 0 0 0 60px;
-    padding: 100px 0;
+    margin: 0 0 0 10rem;
+    padding: 10rem 0;
     overflow: hidden;
 }
 
 .best .left {
+    position: relative;
     width: 20%;
-    margin: 0 100px 0 0;
+    margin: 0 5rem 0 0;
 }
 
 .best .left .t_bg {
     position: relative;
-    border-radius: 150px;
+    border-radius: 15rem;
     background: #f1f1f1;
-    width: 400px;
+    width: 40rem;
     height: 100%;
-    transform: translateX(30px);
+    transform: translateX(3rem);
 }
 
 .best .left .t_bg::before {
     position: absolute;
-    top: -10px;
-    left: -30px;
+    top: -1rem;
+    left: -3rem;
     content: "";
     width: 100%;
     height: 100%;
@@ -259,13 +265,13 @@ header .top_banner a {
 }
 
 .best .left .txt h2:nth-child(2) {
-    transform: translateX(45px);
+    transform: translateX(4.5rem);
 }
 
 .best .left .txt a {
     display: inline-block;
-    margin: 30px 0 0 0;
-    font-size: 17px;
+    margin: 3rem 0 0 0;
+    font-size: 1.7rem;
     font-weight: 500;
 }
 
@@ -278,15 +284,24 @@ header .top_banner a {
     margin: 5px 0 0 0;
 }
 
+.best .left .b_slider_ar {
+    position: absolute;
+    top: 50%;
+    left: 5rem;
+    transform: translateY(-50%);
+    width: 3rem;
+    cursor: pointer;
+}
+
 .best .b_slider {
     width: 80%;
-    margin: 0 0 0 100px;
+    margin: 0 0 0 10rem;
 }
 
 .best .b_slider figure {
-    margin: 0 auto 30px auto;
+    margin: 0 auto 3rem auto;
     background: url(../img/best_itm_bg.png)no-repeat center center/contain;
-    width: 300px;
+    width: 30rem;
 }
 
 
@@ -295,29 +310,29 @@ header .top_banner a {
 }
 
 .best .b_slider .des h3 {
-    margin: 0 0 25px 0;
-    font-size: 19px;
+    margin: 0 0 2.5rem 0;
+    font-size: 1.9rem;
     font-weight: 500;
 }
 
 .best .b_slider .des strong {
     display: inline-block;
     color: #999;
-    margin: 0 0 10px 0;
-    font-size: 17px;
+    margin: 0 0 1rem 0;
+    font-size: 1.7rem;
     font-weight: 500;
 }
 
 .best .b_slider .des a {
     display: inline-block;
-    font-size: 15px;
+    font-size: 1.5rem;
     font-weight: 500;
 }
 
 .best .b_slider .des .color span {
     display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 2rem;
+    height: 2rem;
     border-radius: 50%;
     margin: 0 5px 30px 5px;
 }
@@ -328,6 +343,22 @@ header .top_banner a {
 
 .best .b_slider .des .c_02 {
     background: #8e7e7f;
+}
+
+.best .b_slider .des .c_03 {
+    background: #446a85;
+}
+
+.best .b_slider .des .c_04 {
+    background: #6f8c5e;
+}
+
+.best .b_slider .des .c_05 {
+    background: #daca76;
+}
+
+.best .b_slider .des .c_06 {
+    background: #f5f4f0;
 }
 
 .best .b_slider .des a::after {
@@ -341,27 +372,27 @@ header .top_banner a {
 
 /* col */
 .col {
-    padding: 70px 0 100px 0;
+    padding: 7rem 0 10rem 0;
 }
 
 .col .container .top {
-    margin: 0 0 150px 0;
+    margin: 0 0 15rem 0;
 }
 
 .col .box {
     display: flex;
-    gap: 60px;
+    gap: 6rem;
 }
 
 .col .thumb figure {
     position: relative;
-    width: 500px;
+    width: 50rem;
 }
 
 .col .thumb figure::after {
     position: absolute;
-    top: -20px;
-    left: 20px;
+    top: -2rem;
+    left: 2rem;
     content: "";
     display: block;
     width: 100%;
@@ -382,7 +413,7 @@ header .top_banner a {
 }
 
 .col .box .content .tit {
-    margin: 0 0 80px 0;
+    margin: 0 0 8rem 0;
 }
 
 .col .top .content .tit {
@@ -390,20 +421,20 @@ header .top_banner a {
 }
 
 .col .content .tit h2 {
-    margin: 0 0 30px 0;
+    margin: 0 0 3rem 0;
     font-weight: 400;
 }
 
 .col .content .tit h2 span {
     display: inline-block;
-    margin: 10px 0 0 0;
+    margin: 1rem 0 0 0;
     text-shadow: 0 0 1px #000;
     color: #fff;
     font-family: 'SBAggroB';
 }
 
 .col .content .tit a {
-    font-size: 15px;
+    font-size: 1.5rem;
     font-weight: 500;
     color: #999;
     transition: 0.5s;
@@ -429,7 +460,7 @@ header .top_banner a {
 
 .col .content .pick h3 {
     color: #333;
-    margin: 0 0 15px 0;
+    margin: 0 0 1.5rem 0;
     font-size: 25px;
     font-weight: 600;
 }
@@ -444,7 +475,7 @@ header .top_banner a {
     opacity: 0;
     padding: 5px;
     color: #fff;
-    font-size: 31px;
+    font-size: 3.1rem;
     background: rgba(0, 0, 0, 0.5);
     transition: 0.5s;
 }
@@ -454,32 +485,32 @@ header .top_banner a {
 }
 
 .col .content .a_L {
-    margin: 0 0 0 -300px;
+    margin: 0 0 0 -30rem;
 }
 
 .col .content .a_R {
-    margin: 0 0 0 300px;
+    margin: 0 0 0 30rem;
 }
 
 .col .content .itm_slide figure {
-    padding: 0 10px;
+    padding: 0 1rem;
     text-align: center;
 }
 
 .col .content .itm_slide img {
-    margin: 0 0 25px 0;
+    margin: 0 0 2.5rem 0;
     background: #f9f9f9;
     border-radius: 30%;
 }
 
 .col .content .itm_slide p {
-    margin: 0 0 10px 0;
-    font-size: 17px;
+    margin: 0 0 1rem 0;
+    font-size: 1.7rem;
     font-weight: 500;
 }
 
 .col .content .itm_slide strong {
-    margin: 0 0 20px 0;
+    margin: 0 0 2rem 0;
     display: block;
     color: #999;
 }
@@ -490,7 +521,7 @@ header .top_banner a {
     border-bottom: 1px solid #999;
     border-top: 1px solid #999;
     padding: 8px 0;
-    margin: 0 0 20px 0;
+    margin: 0 0 2rem 0;
     font-weight: 500;
     transition: 0.5s;
 }
@@ -518,14 +549,14 @@ header .top_banner a {
 .designer .tit {
     position: absolute;
     top: 50%;
-    left: calc((100% - 1200px)/2);
+    left: calc((100% - 120rem)/2);
     transform: translateY(-50%);
 }
 
 
 .designer .tit h2>span {
     font-family: 'SBAggroB';
-    font-size: 70px;
+    font-size: 7rem;
     line-height: 1.25;
     color: #fff;
     background: linear-gradient(to top, #999 50%, transparent 50%)
@@ -536,8 +567,8 @@ header .top_banner a {
     text-align: center;
     color: rgba(255, 255, 255, 0.5);
     margin: 0 auto;
-    line-height: 30px;
-    font-size: 25px;
+    line-height: 3rem;
+    font-size: 2.5rem;
     transition: 0.5s;
 }
 
@@ -548,7 +579,7 @@ header .top_banner a {
 .designer .tit .d_arrow {
     position: relative;
     display: inline-block;
-    width: 60px;
+    width: 6rem;
     height: 1px;
     background: rgba(255, 255, 255, 0.5);
     margin: 0 0 5px 15px;
@@ -557,11 +588,11 @@ header .top_banner a {
 
 .designer .tit .d_arrow::before {
     position: absolute;
-    top: -35px;
-    left: -105px;
+    top: -3.5rem;
+    left: -10.5rem;
     content: "";
-    width: 130px;
-    height: 60px;
+    width: 13rem;
+    height: 6rem;
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 50%;
     transition: 0.5s;
@@ -572,7 +603,7 @@ header .top_banner a {
     top: 0;
     right: 0;
     content: "";
-    width: 15px;
+    width: 1.5rem;
     height: 1px;
     background: rgba(255, 255, 255, 0.5);
     transform: rotate(45deg);
@@ -591,7 +622,7 @@ header .top_banner a {
 
 .designer .photo_s {
     display: flex;
-    gap: 30px;
+    gap: 3rem;
     width: 50%;
     margin: 0 0 0 auto;
     padding-right: calc((100% - 1200px)/2);
@@ -602,7 +633,7 @@ header .top_banner a {
 }
 
 .designer .photo_s figure {
-    margin: 15px 0;
+    margin: 1.5rem 0;
 }
 
 .designer .photo_1 {
@@ -611,22 +642,22 @@ header .top_banner a {
 
 .designer .photo_2 {
     width: 50%;
-    transform: translateY(80px);
+    transform: translateY(8rem);
 }
 
 /* magazine */
 .magazine {
-    padding: 100px 0;
+    padding: 10rem 0;
 }
 
 .magazine h2 {
-    margin: 0 0 30px 0;
+    margin: 0 0 3rem 0;
     text-align: center;
 }
 
 .magazine .container {
     display: flex;
-    gap: 40px;
+    gap: 4rem;
 }
 
 .magazine figure {
@@ -636,8 +667,8 @@ header .top_banner a {
 
 .magazine figure::after {
     position: absolute;
-    top: 20px;
-    right: -20px;
+    top: 2rem;
+    right: -2rem;
     content: "";
     width: 100%;
     height: 100%;
@@ -654,7 +685,7 @@ header .top_banner a {
 
 .magazine figure img {
     width: 100%;
-    margin: 0 0 15px 0;
+    margin: 0 0 1.5rem 0;
 }
 
 .magazine .txt {
@@ -662,7 +693,7 @@ header .top_banner a {
 }
 
 .magazine .txt h3 {
-    font-size: 24px;
+    font-size: 2.4rem;
     font-weight: 700;
     margin: 0 0 10px 0;
     text-transform: uppercase;
@@ -670,14 +701,14 @@ header .top_banner a {
 
 .magazine .txt strong {
     color: rgba(0, 0, 0, 0.3);
-    font-size: 35px;
+    font-size: 3.5rem;
     font-weight: 800;
     font-family: 'SBAggroB';
 }
 
 /* footer */
 footer {
-    padding: 50px 0;
+    padding: 5rem 0;
     background: #111;
     color: #fff;
 }
@@ -688,7 +719,7 @@ footer .container {
 }
 
 footer .container figure {
-    width: 200px;
+    width: 20rem;
     margin: auto 0;
 }
 
@@ -697,11 +728,11 @@ footer .container .center {
 }
 
 footer .container .top {
-    margin-bottom: 20px;
+    margin: 0 0 2rem 0;
 }
 
 footer .container .top dd a {
-    font-size: 17px;
+    font-size: 1.7rem;
     font-weight: 700;
 }
 
@@ -711,32 +742,32 @@ footer .container .top dd a:hover {
 }
 
 footer .container .bottom dl {
-    margin-bottom: 10px;
+    margin: 0 0 1rem 0;
 }
 
 footer .container .center dl>dd {
     display: inline-block;
-    font-size: 13px;
+    font-size: 1.3rem;
 }
 
 footer .container .center dl>dd~dd::before {
     content: "";
     display: inline-block;
-    margin: 0 15px;
+    margin: 0 1.5rem;
     width: 1px;
-    height: 11px;
+    height: 1.1rem;
     background: #333;
 }
 
 footer .container .cs dl>dd,
 footer .container.cs dl>dt {
-    margin: 10px 0;
-    font-size: 13px;
+    margin: 1rem 0;
+    font-size: 1.3rem;
     font-weight: 500;
 }
 
 footer .container .cs dl a {
-    font-size: 19px;
+    font-size: 1.9rem;
     font-weight: 700;
 }
 
@@ -755,7 +786,7 @@ footer .container .cs dl a {
 .scrollbtn i {
     background: #111;
     color: #fff;
-    padding: 12px;
+    padding: 1.2rem;
     cursor: pointer;
 }
 
