--- a/11_doosi/src/css/Spage.scss
+++ b/11_doosi/src/css/Spage.scss
@@ -106,8 +106,15 @@
 }
 
 //class sub02
-.class{
-    
+.class {}
+
+//subscribe sub03
+.subscribe {
+    .content {
+        .stit {
+            display: flex;
+        }
+    }
 }
 
 
