--- a/11_doosi/src/css/basic.scss
+++ b/11_doosi/src/css/basic.scss
@@ -10,7 +10,7 @@ serif;
 
 
 * {
-    // outline: 1px solid rgb(158, 179, 199) !important;
+    outline: 1px solid rgb(158, 179, 199) !important;
 }
 
 body {
@@ -28,9 +28,9 @@ body {
 }
 
 .line {
-    background: $m_c;
-    height: 3px;
-    margin: 0 0 5px 0;
+    border-top: 3px solid $m_c;
+    border-bottom: 3px solid $m_c;
+    padding: 2px;
 }
 
 // Header
@@ -68,10 +68,6 @@ body {
             font-family: $hah_f;
             text-transform: uppercase;
         }
-    }
-
-    .last {
-        margin: 0 0 0 0;
     }
 }
 
